added some changes related to login

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,8 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
- spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
+current_session_context_class=thread
 # Enabling H2 Console
 spring.h2.console.enabled=true
  
@@ -60,3 +61,5 @@ logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 #logging.level.org.springframework.security=DEBUG
 #server.error.whitelabel.enabled=false
 #
+
+
